# UMKC-Lab-Assignments

./: CMakeLists.txt
Final/: CMakeLists.txt  Main.cpp
Lab 0/: CMakeLists.txt  Main  Main.cpp
Lab 1/: CMakeLists.txt  Main  Main.cpp
Lab 2/: CMakeLists.txt  Main  Main.cpp
Lab 3/: Blackjack.cpp  CMakeLists.txt  Craps.cpp  Functions.h  Games.h  Hangman.cpp  Main.cpp
Lab 4/: CMakeLists.txt  Main.cpp
Lab 5/: CMakeLists.txt  Main.cpp
Lab 6/: CMakeLists.txt  Main.cpp
Midterm/: CMakeLists.txt  Main.cpp
