cmake_minimum_required(VERSION 3.25)
project(UMKC-Lab-Assignments)

add_subdirectory("Lab 0")
add_subdirectory("Lab 1")
add_subdirectory("Lab 2")
add_subdirectory("Lab 3")
add_subdirectory("Lab 4")
add_subdirectory("Lab 5")
add_subdirectory("Lab 6")
add_subdirectory("Midterm")
add_subdirectory("Final")